# auto-embeds

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  poetry.toml  pyproject.toml
auto_embeds/: analytical.py  data.py  embed_utils.py  exploration.py  metrics.py  modules.py  steer.py  verify.py
auto_steer/: activation_steering_experiments.py  convert_dict.py  data.py  joseph_experiment.py  modules.py  single_token_sweep.py  steering_utils.py
datasets/: kaikki-french-dictionary-single-word-pairs-no-hyphen.json  kaikki-french-dictionary-single-word-pairs.json  wikdict-azure-en-fr.json
demos/: minimal_demo.py
experiments/: 2024-05-05 analytical and ln.py  2024-05-09 translation and linear map.py  2024-05-11 big sweep.py  2024-05-12 rotation trials experiment 8.py  2024-05-14 rotation trials.py  activation_single_token_experiments.py  activation_steering_experiments.py  all_transformation_experiment.py  analyse_experiment.py  analytical_solution_experiments.py  analytical_solution_experiments_zh.py  benchmark_training_performance_new.py  bloom_embedding_plots.py  bloom_pca.py  code_graveyard.py  configure_experiment.py  exploration.py  gpt2_to_bloom_embeds.py  language_rotation_sweep_fr_1.py  language_rotation_sweep_fr_2.py  language_rotation_sweep_zh_1.py  layernorm_vis.py  metrics_visualisation.py  prepare_experiment.py  profile_configure_experiment.py  profile_run_experiment.py  pytorch_profile.py  rotatability.py  run_experiment.py  run_wandb.py  run_wandb_2024-04-18_random_and_singular.py  run_wandb_2024-04-18_random_and_singular_dash.py  run_wandb_2024-04-18_random_and_singular_dash_backup.py  scratch.py  scratch_funcs.py  scratch_notebook.py  scratch_notebook_fr.py  scratch_notebook_zh.py  single_token_sweep.py  transformer_lens_processing.py  (+9 more)
tests/: test_activation_steeering_experiments.py  test_embed_utils.py  test_run_experiment.py  test_steering_utils.py
(+56 files in other folders)
